--- a/frontend/src/pages/Signup/Signup.css
+++ b/frontend/src/pages/Signup/Signup.css
@@ -9,13 +9,20 @@
   margin-top: 8%;
 }
 
+.container_search {
+  display: none;
+}
+
+#icon_sign {
+  display: none;
+}
+
 .title_signup {
   color: rgba(255, 255, 255, 1);
   margin-left: 36%;
   margin-bottom: 0.5rem;
   margin-top: 1rem;
   font-size: 35px;
-  font-weight: bold;
   -webkit-text-stroke: 1px rgba(255, 255, 255, 1);
 }
 
@@ -24,13 +31,11 @@
   margin-left: 40%;
   margin-bottom: 3rem;
   font-size: 25px;
-  font-weight: bold;
   margin-top: 6%;
 }
 #text_sign {
   margin-left: 4%;
   margin-bottom: 1rem;
-  font-weight: bold;
   font-size: 20px;
 }
 .container_email {
@@ -48,7 +53,6 @@
   padding-left: 4.5%;
   color: rgba(255, 255, 255, 1);
   font-family: "poppins";
-  font-weight: bold;
   font-size: 15px;
 }
 .container_username {
@@ -60,7 +64,6 @@
 #text_user {
   margin-left: 4%;
   margin-bottom: 1rem;
-  font-weight: bold;
   font-size: 20px;
 }
 
@@ -73,7 +76,6 @@
   padding-left: 4.5%;
   color: rgba(255, 255, 255, 1);
   font-family: "poppins";
-  font-weight: bold;
   font-size: 15px;
 }
 
@@ -86,7 +88,6 @@
 #text_pass {
   margin-left: 4%;
   margin-bottom: 1rem;
-  font-weight: bold;
   font-size: 20px;
 }
 
@@ -99,12 +100,10 @@
   padding-left: 4.5%;
   color: rgba(255, 255, 255, 1);
   font-family: "poppins";
-  font-weight: bold;
   font-size: 15px;
 }
 
 ::placeholder {
-  font-style: bold;
   font-size: 1em;
   color: rgba(255, 255, 255, 1);
   padding-left: 3%;
@@ -122,18 +121,133 @@
   background-color: rgba(221, 167, 79, 1);
   border-radius: 50px 50px 50px 50px;
   font-family: "poppins";
-  font-weight: bold;
   font-size: 25px;
-  -webkit-text-stroke: 2px rgba(50, 50, 50, 1);
-  /* border-style: none; */
   border: 1.5px rgba(221, 167, 79, 1);
 }
 
 @media only screen and (min-width: 768px) {
+  .container_logo {
+    display: flex;
+    justify-content: center;
+  }
+
   #logo_sign {
-    width: 63px;
-    height: 63px;
+    width: 100px;
+    height: 100px;
     margin-left: 3%;
     margin-top: 3%;
+  }
+  #icon_sign {
+    display: initial;
+    margin-left: 64%;
+    margin-top: 3%;
+  }
+
+  .container_search {
+    display: flex;
+    align-items: center;
+    width: 265%;
+    height: 3rem;
+    border-radius: 50px 50px 50px 50px;
+    background-color: rgba(50, 50, 50, 1);
+    border: solid 2px rgba(255, 255, 255, 1);
+    margin-left: 85%;
+    padding-bottom: 1rem;
+    padding-left: 15%;
+    color: rgba(255, 255, 255, 1);
+    font-family: "poppins";
+    font-size: 15px;
+    margin-top: 37px;
+  }
+
+  .title_signup {
+    color: rgba(255, 255, 255, 1);
+    margin-left: 44%;
+    margin-bottom: 0.5rem;
+    margin-top: 1rem;
+    font-size: 35px;
+    -webkit-text-stroke: 1px rgba(255, 255, 255, 1);
+  }
+
+  #join_us {
+    color: rgba(255, 255, 255, 1);
+    margin-left: 45%;
+    margin-bottom: 1rem;
+    font-size: 25px;
+    margin-top: 1%;
+  }
+
+  #text_sign {
+    margin-left: 32%;
+    margin-bottom: 1rem;
+    font-size: 20px;
+  }
+
+  .container_email {
+    margin-bottom: 2%;
+  }
+
+  #email {
+    width: 25%;
+    height: 3.8rem;
+    border-radius: 50px 50px 50px 50px;
+    background-color: rgba(50, 50, 50, 1);
+    border: solid 2px rgba(255, 255, 255, 1);
+    padding-left: 1.5%;
+    color: rgba(255, 255, 255, 1);
+    font-family: "poppins";
+    font-size: 15px;
+    margin-left: 30%;
+  }
+
+  .container_username {
+    margin-bottom: 2%;
+  }
+
+  #text_user {
+    margin-left: 32%;
+    margin-bottom: 1rem;
+    font-size: 20px;
+  }
+
+  #username {
+    width: 25%;
+    height: 3.8rem;
+    border-radius: 50px 50px 50px 50px;
+    background-color: rgba(50, 50, 50, 1);
+    border: solid 2px rgba(255, 255, 255, 1);
+    padding-left: 1.5%;
+    color: rgba(255, 255, 255, 1);
+    font-family: "poppins";
+    font-size: 15px;
+    margin-left: 30%;
+  }
+
+  .container_password {
+    margin-bottom: 2%;
+  }
+
+  #text_pass {
+    margin-left: 32%;
+    margin-bottom: 1rem;
+    font-size: 20px;
+  }
+
+  #pass {
+    width: 25%;
+    height: 3.8rem;
+    border-radius: 50px 50px 50px 50px;
+    background-color: rgba(50, 50, 50, 1);
+    border: solid 2px rgba(255, 255, 255, 1);
+    padding-left: 1.5%;
+    color: rgba(255, 255, 255, 1);
+    font-family: "poppins";
+    font-size: 15px;
+    margin-left: 30%;
+  }
+
+  .signup_button {
+    width: 26%;
+    margin-left: 35%;
   }
 }
