--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -1,11 +1,107 @@
 .bloc_Navbar {
   border-top: 0.0002rem solid;
+  border-top-color: var(--white);
   display: flex;
   justify-content: space-around;
   align-items: center;
   position: fixed;
   bottom: 0px;
   width: 100%;
-  background-color: #272a31;
+  background-color: var(--black);
   height: 5.5rem;
+}
+.imgAdminNavbar {
+  display: none;
+}
+.textFavoritesNavbar,
+.textUploadNavbar,
+.textSubscriptionNavbar,
+.textProfilNavbar,
+.textAdminNavbar,
+.textCategoryNavbar,
+.textReviewNavbar,
+.adminNavbar_bloc {
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .bloc_Navbar {
+    background-color: var(--grey);
+    right: 0px;
+    bottom: none;
+    width: 20.5%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 4rem;
+  }
+  .homeNavbar {
+    display: none;
+  }
+  .profilNavbar_bloc {
+    order: -1;
+  }
+  .profilNavbar {
+    height: 78px;
+    width: 78px;
+    margin-top: 2.5rem;
+  }
+  .imgAdminNavbar {
+    display: block;
+    height: 78px;
+    width: 78px;
+    margin-top: 2.5rem;
+  }
+  .textFavoritesNavbar,
+  .textUploadNavbar,
+  .textSubscriptionNavbar,
+  .textProfilNavbar,
+  .textAdminNavbar,
+  .textCategoryNavbar,
+  .textReviewNavbar {
+    display: block;
+    text-align: center;
+    color: var(--white);
+    font-size: 30px;
+  }
+  .starNavbar {
+    height: 55px;
+    width: 55px;
+  }
+  .uploadNavbar {
+    height: 52px;
+    width: 52px;
+  }
+  .subscribeNavbar {
+    height: 48px;
+    width: 48px;
+  }
+  .categoryNavbar {
+    height: 55px;
+    width: 55px;
+  }
+  .reviewNavbar {
+    height: 60px;
+    width: 60px;
+  }
+  .adminNavbar_bloc {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .categoryNavbar_bloc,
+  .reviewNavbar_bloc,
+  .favoritesNavbar_bloc,
+  .uploadNavbar_bloc,
+  .subscriptionNavbar_bloc,
+  .profilNavbar_bloc {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
 }
