--- a/frontend/src/pages/Signup/Signup.css
+++ b/frontend/src/pages/Signup/Signup.css
@@ -1,12 +1,5 @@
-.container_body {
+.container_Body_Signup {
   background-color: var(--black);
-}
-
-#logo_sign {
-  width: 63px;
-  height: 63px;
-  margin-left: 43%;
-  margin-top: 8%;
 }
 
 .container_search {
@@ -124,7 +117,7 @@
   border: 1.5px rgba(221, 167, 79, 1);
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1024px) {
   .container_logo {
     display: flex;
     justify-content: center;
@@ -138,25 +131,20 @@
   }
   #icon_sign {
     display: initial;
-    margin-left: 64%;
-    margin-top: 3%;
   }
 
   .container_search {
     display: flex;
     align-items: center;
-    width: 265%;
+    width: 50%;
     height: 3rem;
     border-radius: 50px 50px 50px 50px;
     background-color: var(--black);
     border: solid 2px rgba(255, 255, 255, 1);
-    margin-left: 85%;
-    padding-bottom: 1rem;
-    padding-left: 15%;
+
     color: rgba(255, 255, 255, 1);
     font-family: "poppins";
     font-size: 15px;
-    margin-top: 37px;
   }
 
   .input_search {
@@ -167,7 +155,7 @@
     color: rgba(255, 255, 255, 1);
     margin-left: 44%;
     margin-bottom: 0.5rem;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     font-size: 35px;
     -webkit-text-stroke: 1px rgba(255, 255, 255, 1);
   }
@@ -175,9 +163,9 @@
   #join_us {
     color: rgba(255, 255, 255, 1);
     margin-left: 45%;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     font-size: 25px;
-    margin-top: 1%;
+    margin-top: 0.5rem;
   }
 
   #text_sign {
@@ -187,7 +175,7 @@
   }
 
   .container_email {
-    margin-bottom: 2%;
+    margin-bottom: 1%;
   }
 
   #email {
@@ -204,7 +192,7 @@
   }
 
   .container_username {
-    margin-bottom: 2%;
+    margin-bottom: 1%;
   }
 
   #text_user {
@@ -227,7 +215,7 @@
   }
 
   .container_password {
-    margin-bottom: 2%;
+    margin-bottom: 1%;
   }
 
   #text_pass {
