--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -1,3 +1,6 @@
+.container_Body_Header {
+}
+
 .title_log {
   color: rgba(255, 255, 255, 1);
   margin-left: 36%;
@@ -10,9 +13,9 @@
 #text_log {
   color: rgba(255, 255, 255, 1);
   margin-left: 22%;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
   font-size: 25px;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 .container_password {
   display: flex;
@@ -21,14 +24,14 @@
 
 .link_log {
   flex-direction: column;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   margin-left: 20%;
   color: var(--white);
 }
 
 .text_log_end {
   color: var(--white);
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   margin-left: 22%;
 }
 
@@ -42,14 +45,13 @@
   font-family: "poppins";
 }
 
-@media only screen and (min-width: 768px) {
-  .main {
+@media only screen and (min-width: 1024px) {
+  .container_body {
     background-color: var(--black);
-    padding-bottom: 11rem;
   }
 
   .title_log {
-    margin-left: 44%;
+    margin-left: 43.5%;
   }
 
   #text_log {
