--- a/frontend/src/pages/Forgot/ForgotPassword.css
+++ b/frontend/src/pages/Forgot/ForgotPassword.css
@@ -1,3 +1,9 @@
+.container_Forgot {
+  height: 100%;
+  width: 100%;
+  background-color: var(--black);
+}
+
 #text_Oups {
   color: rgba(255, 255, 255, 1);
   margin-left: 39%;
