--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -1,72 +1,109 @@
 .container_Body_Header {
+  background-color: var(--black);
+  min-height: calc(100vh - 5.5rem);
+  width: 100%;
 }
 
-.title_log {
+.text_Title_Log {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   color: rgba(255, 255, 255, 1);
-  margin-left: 36%;
-  margin-bottom: 0.5rem;
-  margin-top: 1rem;
-  font-size: 35px;
+  font-size: 25px;
   -webkit-text-stroke: 1px rgba(255, 255, 255, 1);
+  margin-bottom: 1rem;
 }
 
-#text_log {
+.container_Log {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  margin-bottom: 3rem;
+}
+
+.container_Input_Log {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: var(--white);
+  align-items: center;
+  gap: 0.5rem;
+  width: 80%;
+}
+
+.container_Username_Log {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+#text_Log {
   color: rgba(255, 255, 255, 1);
-  margin-left: 22%;
-  margin-bottom: 1rem;
   font-size: 25px;
   margin-top: 0.5rem;
 }
-.container_password {
+
+.container_Password {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
-.link_log {
+.link_Log {
   flex-direction: column;
-  margin-top: 0.5rem;
-  margin-left: 20%;
   color: var(--white);
 }
 
-.text_log_end {
+.text_Log_End {
   color: var(--white);
-  margin-top: 0.5rem;
-  margin-left: 22%;
 }
 
-.signup_end {
+.container_But_Log {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+}
+
+.signup_End {
   color: rgba(221, 167, 79, 1);
-  margin-left: 37%;
   background-color: var(--black);
   border-style: none;
   font-weight: bold;
   font-size: 22px;
   font-family: "poppins";
+  width: 100%;
 }
 
 @media only screen and (min-width: 1024px) {
-  .container_body {
+  .container_Body_Header {
     background-color: var(--black);
+    min-height: 100vh;
   }
 
-  .title_log {
-    margin-left: 43.5%;
+  .container_Password {
+    width: 40%;
   }
 
-  #text_log {
-    margin-left: 39%;
+  .container_Username_Log {
+    width: 40%;
+  }
+  .title_Log {
   }
 
-  .link_log {
-    margin-left: 36%;
+  #text_Log {
   }
 
-  .text_log_end {
-    margin-left: 40%;
+  .link_Log {
+    margin-left: 4.5rem;
   }
 
-  .signup_end {
-    margin-left: 44.5%;
+  .text_Log_End {
+  }
+
+  .signup_End {
   }
 }
