--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -1,4 +1,4 @@
-.bloc_Navbar {
+.containeur_Body_Navbar {
   border-top: 0.0002rem solid;
   border-top-color: var(--white);
   display: flex;
@@ -10,22 +10,22 @@
   background-color: var(--black);
   height: 5.5rem;
 }
-.imgAdminNavbar {
+.img_Admin_Navbar {
   display: none;
 }
-.textFavoritesNavbar,
-.textUploadNavbar,
-.textSubscriptionNavbar,
-.textProfilNavbar,
-.textAdminNavbar,
-.textCategoryNavbar,
-.textReviewNavbar,
-.adminNavbar_bloc {
+.text_Favorites_Navbar,
+.text_Upload_Navbar,
+.text_Subscription_Navbar,
+.text_Profil_Navbar,
+.text_Admin_Navbar,
+.text_Category_Navbar,
+.text_Review_Navbar,
+.admin_Navbar_bloc {
   display: none;
 }
 
 @media (min-width: 1024px) {
-  .bloc_Navbar {
+  .containeur_Body_Navbar {
     background-color: var(--grey);
     right: 0px;
     bottom: none;
@@ -35,72 +35,72 @@
     justify-content: flex-start;
     gap: 4rem;
   }
-  .homeNavbar {
+  .home_Navbar {
     display: none;
   }
-  .profilNavbar_bloc {
+  .profil_Navbar_bloc {
     order: -1;
   }
-  .profilNavbar {
+  .profil_Navbar {
     height: 78px;
     width: 78px;
     margin-top: 2.5rem;
   }
-  .imgAdminNavbar {
+  .img_Admin_Navbar {
     display: block;
     height: 78px;
     width: 78px;
     margin-top: 2.5rem;
   }
-  .textFavoritesNavbar,
-  .textUploadNavbar,
-  .textSubscriptionNavbar,
-  .textProfilNavbar,
-  .textAdminNavbar,
-  .textCategoryNavbar,
-  .textReviewNavbar {
+  .text_Favorites_Navbar,
+  .text_Upload_Navbar,
+  .text_Subscription_Navbar,
+  .text_Profil_Navbar,
+  .text_Admin_Navbar,
+  .text_Category_Navbar,
+  .text_Review_Navbar {
     display: block;
     text-align: center;
     color: var(--white);
     font-size: 30px;
   }
-  .starNavbar {
+  .star_Navbar {
     height: 55px;
     width: 55px;
   }
-  .uploadNavbar {
+  .upload_Navbar {
     height: 52px;
     width: 52px;
   }
-  .subscribeNavbar {
+  .subscribe_Navbar {
     height: 48px;
     width: 48px;
   }
-  .categoryNavbar {
+  .category_Navbar {
     height: 55px;
     width: 55px;
   }
-  .reviewNavbar {
+  .review_Navbar {
     height: 60px;
     width: 60px;
   }
-  .adminNavbar_bloc {
+  .admin_Navbar_bloc {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  .categoryNavbar_bloc,
-  .reviewNavbar_bloc,
-  .favoritesNavbar_bloc,
-  .uploadNavbar_bloc,
-  .subscriptionNavbar_bloc,
-  .profilNavbar_bloc {
+  .category_Navbar_bloc,
+  .review_Navbar_bloc,
+  .favorites_Navbar_bloc,
+  .upload_Navbar_bloc,
+  .subscription_Navbar_bloc,
+  .profil_Navbar_bloc {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    gap: 0.1rem;
     padding-left: 10%;
     padding-right: 10%;
   }
