dynamique header and navbar functionnal

--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -25,6 +25,9 @@
 }
 
 @media (min-width: 1024px) {
+  .hiddenNavbar {
+    display: none;
+  }
   .containeur_Body_Navbar {
     background-color: var(--grey);
     right: 0px;
@@ -33,7 +36,7 @@
     height: 100%;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 4rem;
+    gap: 3rem;
   }
   .home_Navbar {
     display: none;
@@ -44,7 +47,7 @@
   .profil_Navbar {
     height: 78px;
     width: 78px;
-    margin-top: 2.5rem;
+    margin-top: 1rem;
   }
   .img_Admin_Navbar {
     display: block;
