finished css front for upload, addvideo, addshort

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -135,7 +135,7 @@ table {
   border-spacing: 0;
 }
 .main {
-  background-color: #272a31;
+  background-color: var(--black);
 }
 .footer {
   bottom: 0;
