--- a/frontend/src/pages/Signup/Signup.css
+++ b/frontend/src/pages/Signup/Signup.css
@@ -2,10 +2,15 @@
   background-color: var(--black);
   min-height: calc(100vh - 5.5rem);
   width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-.container_search {
-  display: none;
+.container_Header_Sign {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0.5rem;
 }
 
 .container_Sign {
@@ -13,6 +18,7 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
+  margin-top: 1.5rem;
 }
 
 .text_Title_Sign {
@@ -35,12 +41,6 @@
   font-size: 25px;
 }
 
-#text_Sign {
-  font-size: 20px;
-  margin-bottom: 0.5rem;
-  margin-left: 1rem;
-}
-
 .container_Input_Sign {
   display: flex;
   flex-direction: column;
@@ -49,6 +49,12 @@
   align-items: center;
   gap: 0.5rem;
   width: 80%;
+}
+
+#text_Sign {
+  font-size: 20px;
+  margin-bottom: 0.5rem;
+  margin-left: 1rem;
 }
 
 .container_Sign {
@@ -61,7 +67,7 @@
   width: 100%;
 }
 
-#email {
+#email_Sign {
   height: 3.8rem;
   border-radius: 50px 50px 50px 50px;
   background-color: var(--black);
@@ -85,7 +91,7 @@
   margin-left: 1rem;
 }
 
-#username {
+#username_Sign {
   height: 3.8rem;
   border-radius: 50px 50px 50px 50px;
   background-color: var(--black);
@@ -109,7 +115,7 @@
   margin-left: 1rem;
 }
 
-#pass {
+#pass_Sign {
   height: 3.8rem;
   border-radius: 50px 50px 50px 50px;
   background-color: var(--black);
@@ -144,37 +150,6 @@
 }
 
 @media only screen and (min-width: 1024px) {
-  .container_logo {
-    display: flex;
-    justify-content: center;
-  }
-
-  #logo_sign {
-    width: 100px;
-    height: 100px;
-    margin-left: 3%;
-    margin-top: 3%;
-  }
-  #icon_sign {
-    display: initial;
-  }
-
-  .container_search {
-    display: flex;
-    align-items: center;
-    width: 50%;
-    height: 3rem;
-    border-radius: 50px 50px 50px 50px;
-    background-color: var(--black);
-    border: solid 2px rgba(255, 255, 255, 1);
-    color: rgba(255, 255, 255, 1);
-    font-family: "poppins";
-    font-size: 15px;
-  }
-
-  .input_search {
-    background-color: var(--black);
-  }
   .text_Title_Sign {
     margin-bottom: 4rem;
   }
@@ -193,22 +168,14 @@
     font-size: 20px;
   }
 
+  .container_Input_Sign {
+    width: 80%;
+  }
+
   .container_Email {
     display: flex;
     flex-direction: column;
     width: 30%;
-  }
-
-  #email {
-    width: 100%;
-    height: 3.8rem;
-    border-radius: 50px 50px 50px 50px;
-    background-color: var(--black);
-    border: solid 2px rgba(255, 255, 255, 1);
-    padding-left: 1.5%;
-    color: rgba(255, 255, 255, 1);
-    font-family: "poppins";
-    font-size: 15px;
   }
 
   .container_User {
@@ -217,42 +184,10 @@
     width: 30%;
   }
 
-  #text_User {
-    font-size: 20px;
-  }
-
-  #username {
-    width: 100%;
-    height: 3.8rem;
-    border-radius: 50px 50px 50px 50px;
-    background-color: var(--black);
-    border: solid 2px rgba(255, 255, 255, 1);
-    padding-left: 1.5%;
-    color: rgba(255, 255, 255, 1);
-    font-family: "poppins";
-    font-size: 15px;
-  }
-
   .container_Pass {
     display: flex;
     flex-direction: column;
     width: 30%;
-  }
-
-  #text_Pass {
-    font-size: 20px;
-  }
-
-  #pass_Sign {
-    width: 100%;
-    height: 3.8rem;
-    border-radius: 50px 50px 50px 50px;
-    background-color: var(--black);
-    border: solid 2px rgba(255, 255, 255, 1);
-    padding-left: 1.5%;
-    color: rgba(255, 255, 255, 1);
-    font-family: "poppins";
-    font-size: 15px;
   }
 
   .signup_Button {
