added login button when unregistered and some css for the header

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,8 +1,18 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding-top: 0.5rem;
+  justify-content: space-evenly;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  flex-wrap: wrap;
+}
+.header-unregistered {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-top: 1rem;
+  flex-wrap: wrap;
+  border-bottom: 0.0002rem solid var(--white);
 }
 
 #logo_Sign {
@@ -11,28 +21,66 @@
 }
 
 .container_Search {
-  display: none;
+  display: block;
+  display: flex;
+  align-items: center;
+  width: 56%;
+  height: 3.938rem;
+  border-radius: 50px 50px 50px 50px;
+  background-color: var(--black);
+  border: solid 2px rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 1);
+  font-family: "poppins";
+  font-weight: bold;
+  font-size: 15px;
+  padding-left: 7%;
+  padding-right: 4%;
 }
 
 .input_Search {
-  display: none;
+  display: block;
+  width: 95%;
+  height: 90%;
+  background-color: var(--black);
+  border-style: none;
+  color: rgba(255, 255, 255, 1);
+  font-size: 20px;
+  border-radius: 50px;
 }
-
-#icon_Search {
-  display: none;
+.input_Search::placeholder {
+  padding: 0;
 }
-
+.logIn_Btn {
+  background-color: var(--orange);
+  color: var(--black);
+  border-radius: 50px;
+  border: none;
+  font-size: 30px;
+  font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 87.5%;
+  height: 3.938rem;
+  cursor: pointer;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 #icon_Sign {
   display: none;
 }
 
-.input_search:hover {
+.input_Search:hover,
+.input_Search:focus {
   border: none;
   outline: none;
 }
 
 @media only screen and (min-width: 1024px) {
   .header {
+    justify-content: space-around;
+  }
+  .header-unregistered {
     justify-content: space-around;
   }
 
@@ -43,18 +91,13 @@
     display: block;
   }
   .container_Search {
-    display: block;
-    display: flex;
-    align-items: center;
-    width: 55%;
+    width: 44%;
     height: 3.8rem;
-    border-radius: 50px 50px 50px 50px;
-    background-color: var(--black);
-    border: solid 2px rgba(255, 255, 255, 1);
-    color: rgba(255, 255, 255, 1);
     font-family: "poppins";
     font-weight: bold;
-    font-size: 15px;
+    font-size: 25px;
+    padding-left: 3%;
+    padding-right: 3%;
   }
 
   .input_Search {
@@ -66,5 +109,11 @@
     color: rgba(255, 255, 255, 1);
     font-size: 15px;
     border-radius: 50px;
+  }
+  .header-unregistered {
+    border-bottom: none;
+  }
+  .logIn_Btn {
+    width: 17.78%;
   }
 }
