--- a/frontend/src/pages/Forgot/ForgotPassword.css
+++ b/frontend/src/pages/Forgot/ForgotPassword.css
@@ -130,6 +130,9 @@
 }
 
 @media only screen and (min-width: 1024px) {
+  .container_Body_Forgot {
+    min-height: 100vh;
+  }
   .container_Email_Forgot {
     width: 30%;
   }
