--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -136,6 +136,9 @@
 }
 
 @media only screen and (min-width: 1024px) {
+  .container_Body_Header {
+    min-height: 100vh;
+  }
   .text_Title_Log {
     margin-bottom: 4rem;
   }
