--- a/frontend/src/pages/Signup/Signup.css
+++ b/frontend/src/pages/Signup/Signup.css
@@ -135,6 +135,8 @@
 .container_But_Signup {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
   width: 80%;
 }
 
@@ -147,6 +149,14 @@
   font-family: "poppins";
   font-size: 25px;
   border: 1.5px rgba(221, 167, 79, 1);
+}
+
+.container_Text_End {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 @media only screen and (min-width: 1024px) {
