--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -20,7 +20,8 @@
 .text_Admin_Navbar,
 .text_Category_Navbar,
 .text_Review_Navbar,
-.admin_Navbar_bloc {
+.admin_Navbar_bloc,
+.logOut_Navbar_bloc {
   display: none;
 }
 
@@ -32,7 +33,7 @@
     background-color: var(--grey);
     right: 0px;
     bottom: none;
-    width: 20.5%;
+    width: 15%;
     height: 100%;
     flex-direction: column;
     justify-content: flex-start;
@@ -45,14 +46,14 @@
     order: -1;
   }
   .profil_Navbar {
-    height: 78px;
-    width: 78px;
+    height: 60px;
+    width: 60px;
     margin-top: 1rem;
   }
   .img_Admin_Navbar {
     display: block;
-    height: 78px;
-    width: 78px;
+    height: 60px;
+    width: 60px;
     margin-top: 2.5rem;
   }
   .text_Favorites_Navbar,
@@ -61,38 +62,43 @@
   .text_Profil_Navbar,
   .text_Admin_Navbar,
   .text_Category_Navbar,
-  .text_Review_Navbar {
+  .text_Review_Navbar,
+  .text_LogOut_Navbar {
     display: block;
     text-align: center;
     color: var(--white);
-    font-size: 30px;
+    font-size: 16px;
   }
   .star_Navbar {
-    height: 55px;
-    width: 55px;
+    height: 47px;
+    width: 47px;
   }
   .upload_Navbar {
-    height: 52px;
-    width: 52px;
+    height: 46px;
+    width: 46px;
   }
   .subscribe_Navbar {
-    height: 48px;
-    width: 48px;
+    height: 40px;
+    width: 40px;
   }
   .category_Navbar {
-    height: 55px;
-    width: 55px;
+    height: 42px;
+    width: 42px;
   }
   .review_Navbar {
-    height: 60px;
-    width: 60px;
+    height: 42px;
+    width: 42px;
+    gap: 15px;
   }
-  .admin_Navbar_bloc {
+
+  .admin_Navbar_bloc,
+  .logOut_Navbar_bloc {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+
   .category_Navbar_bloc,
   .review_Navbar_bloc,
   .favorites_Navbar_bloc,
@@ -103,8 +109,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0.1rem;
+
     padding-left: 10%;
     padding-right: 10%;
+  }
+  .review_Navbar_bloc,
+  .category_Navbar_bloc {
+    gap: 15px;
+  }
+  .admin_Navbar_bloc,
+  .logOut_Navbar_bloc,
+  .subscription_Navbar_bloc,
+  .upload_Navbar_bloc {
+    gap: 10px;
+  }
+  .favorites_Navbar_bloc,
+  .profil_Navbar_bloc {
+    gap: 5px;
   }
 }
