--- a/frontend/src/pages/Videos/Video.css
+++ b/frontend/src/pages/Videos/Video.css
@@ -1,7 +1,7 @@
 .containeur_Body_Video {
   background-color: var(--black);
   display: flex;
-  flex-direction: column;
+  flex-direction: flex-start;
   justify-content: center;
   color: var(--white);
   text-align: center;
