--- a/frontend/src/components/Watch/Video/WatchingVideoCard.css
+++ b/frontend/src/components/Watch/Video/WatchingVideoCard.css
@@ -17,14 +17,45 @@
   align-items: center;
   justify-content: space-between;
 }
+.follow_Icon_Watch,
+.unfollow_Icon_Watch {
+  width: 45px;
+  height: 45px;
+}
 
 .flex_Watch_Video_Info {
   display: flex;
   justify-content: flex-end;
+  margin-right: 10%;
+  margin-top: 0.2rem;
 }
+.avatar_Container_Watch {
+  padding-top: 0.6rem;
+  align-self: flex-start;
+  gap: 8%;
+}
+.view_Icon_Watch_Bloc {
+  margin-left: auto;
+  padding-right: 3%;
+  padding-top: 0.29rem;
+  gap: 0.09rem;
+}
+.like_Icon_Watch_Bloc {
+  padding-right: 2%;
+  padding-top: 0.29rem;
+  gap: 0.1rem;
+}
+.favorite_Icon_Watch_Bloc {
+  padding-top: 0.18rem;
+}
+
 .data_Container_Watch {
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
   width: 100%;
+  padding-left: 3.5%;
+  padding-top: 0.5rem;
 }
 
 .avatar_Container_Watch {
@@ -35,22 +66,21 @@
 .moreVert_Icon_Container_Watch {
   display: flex;
   align-items: center;
-  position: absolute;
   flex-direction: flex-end;
+  position: absolute;
+  right: -8rem;
 }
 
 .moreVert_Icon_Container_Watch.active {
   background-color: var(--grey);
-  transform: translateX(0);
+  transform: translateY(0);
   transition: var(--speed) ease;
   border-radius: 10px;
 }
 
 .moreVert_Icon_Container_Watch.inactive {
   transition: var(--speed) cubic-bezier(0.6, -0.28, 0.735, 0.045);
-  height: 2rem;
-
-  flex-direction: flex-end;
+  height: 3rem;
 }
 
 #icon_More_Vertical {
@@ -68,8 +98,8 @@
 .dropdown_Menu.active {
   opacity: 1;
   visibility: visible;
-  transform: translateX(0);
-  transition: var(--speed) cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  transform: translateY(0);
+  transition: var(--speed) cubic-bezier(-10, -0.28, 0.735, 0.045);
   z-index: 1;
 }
 
@@ -102,19 +132,22 @@
   cursor: pointer;
 }
 
-.channel_Details_Watch {
-  text-align: left;
-}
-
 .video_Title_Watch {
-  font-size: 1.2rem;
+  font-size: 22px;
+  height: 2rem;
 }
 
 .creator_Username_Watch {
   font-size: 1rem;
   line-height: 1.5rem;
+  padding-top: 0.5rem;
 }
-
+.view_Icon_Watch_Bloc,
+.like_Icon_Watch_Bloc {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 @media (min-width: 1024px) {
   .watch_Video_Card {
     width: 295px;
