--- a/frontend/src/pages/Videos/Video.css
+++ b/frontend/src/pages/Videos/Video.css
@@ -1,11 +1,11 @@
 .containeur_Body_Video {
   background-color: var(--black);
   display: flex;
-  flex-direction: flex-start;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   color: var(--white);
-  text-align: center;
   min-height: calc(100vh - 5.5rem);
+  gap: 0.5rem;
 }
 @media only screen and (min-width: 1024px) {
   .containeur_Body_Video {
