--- a/frontend/src/components/SubCard/SubCard.css
+++ b/frontend/src/components/SubCard/SubCard.css
@@ -17,7 +17,7 @@
   margin-right: 13rem;
 }
 
-.moreVert_Icon_Container {
+.moreVert_Icon_ContainerSub {
   display: flex;
   align-items: flex-end;
   cursor: pointer;
@@ -27,14 +27,14 @@
   margin-right: 0.7rem;
 }
 
-.moreVert_Icon_Container.active {
+.moreVert_Icon_ContainerSub.active {
   background-color: var(--grey);
   transform: translateX(0);
   transition: var(--speed) ease;
   color: white;
 }
 
-.moreVert_Icon_Container.inactive {
+.moreVert_Icon_ContainerSub.inactive {
   /* transform: translateX(2rem);  */
   transition: var(--speed) cubic-bezier(0.6, -0.28, 0.735, 0.045);
 }
