--- a/frontend/src/components/VideoCard Home/VideocardHome.css
+++ b/frontend/src/components/VideoCard Home/VideocardHome.css
@@ -1,19 +1,19 @@
-.video_Card {
+.video_Card_Home {
   width: 100%;
   position: relative;
 }
-.video_Thumbnail {
+.video_Thumbnail_Home {
   height: 200px;
   width: 100%;
   object-fit: cover;
 }
-.video_Data {
+.video_Data_Home {
   display: flex;
   padding: 0.3rem 0;
   align-items: center;
   justify-content: space-between;
 }
-.data_Container {
+.data_Container_Home {
   display: flex;
   width: 85%;
 }
@@ -93,17 +93,17 @@
   line-height: 1.5rem;
 }
 @media (min-width: 1024px) {
-  .video_Card {
+  .video_Card_Home {
     width: 295px;
     margin-bottom: 40px;
     position: relative;
   }
-  .video_Thumbnail {
-    height: 120px;
-    width: 267px;
+  .video_Thumbnail_Home {
+    height: 200px;
+    width: 450px;
     margin-bottom: 0;
   }
-  .video_Data {
+  .video_Data_Home {
     display: flex;
   }
 }
