--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -1,3 +1,59 @@
-.title_Top {
+.container_Home {
+  background-color: var(--black);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   color: var(--white);
+  min-height: calc(100vh - 5.5rem);
+  justify-content: flex-start;
+}
+
+.container_Body_Home {
+  background-color: var(--black);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: var(--white);
+}
+
+.container_Carousel {
+  width: 100%;
+}
+
+.title_Top {
+  margin-bottom: 0.5rem;
+}
+
+.title_Short {
+  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.container_Short {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+}
+
+.title_Category_Animal {
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+.title_Category_Food {
+  margin-bottom: 0.5rem;
+}
+
+.container_Carousel3 {
+  margin-top: 1rem;
+}
+
+@media only screen and (min-width: 1024px) {
+  .container_Carousel {
+    width: 100%;
+  }
+
+  .slider_Home {
+    width: 100%;
+  }
 }
