added time and video details to videoCard

--- a/frontend/src/pages/UsersProfile/UsersProfile.css
+++ b/frontend/src/pages/UsersProfile/UsersProfile.css
@@ -131,4 +131,10 @@
 }
 
 @media (min-width: 1024px) {
+  .video_Section {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(auto-fit, 295px);
+    justify-content: center;
+  }
 }
