comment section in progress added button and input dynamic in front

--- a/frontend/src/components/Description/Description.css
+++ b/frontend/src/components/Description/Description.css
@@ -6,6 +6,7 @@
   gap: 1rem;
   padding-left: 3%;
   padding-right: 3%;
+  height: 11.33rem;
   border-bottom: 0.0002rem solid;
   border-bottom-color: var(--white);
 }
