--- a/frontend/src/pages/UsersProfile/UsersProfile.css
+++ b/frontend/src/pages/UsersProfile/UsersProfile.css
@@ -133,8 +133,9 @@
 @media (min-width: 1024px) {
   .video_Section {
     display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: repeat(auto-fit, 295px);
-    justify-content: center;
+    grid-gap: 3rem;
+    grid-template-columns: repeat(auto-fit, minmax(0, auto));
+    justify-content: start;
+    margin: 2rem;
   }
 }
