--- a/frontend/src/components/Watch/Video/WatchingVideoCard.css
+++ b/frontend/src/components/Watch/Video/WatchingVideoCard.css
@@ -42,11 +42,12 @@
 }
 .like_Icon_Watch_Bloc {
   padding-right: 2%;
-  padding-top: 0.29rem;
+  padding-top: 0.16rem;
   gap: 0.1rem;
 }
 .favorite_Icon_Watch_Bloc {
-  padding-top: 0.18rem;
+  padding-top: 0.25rem;
+  padding-right: 1%;
 }
 
 .data_Container_Watch {
@@ -81,6 +82,11 @@
 .moreVert_Icon_Container_Watch.inactive {
   transition: var(--speed) cubic-bezier(0.6, -0.28, 0.735, 0.045);
   height: 0rem;
+}
+.like_Icon_Watch:hover,
+.favorite_Icon_Watch:hover,
+.follow_Icon_Watch:hover {
+  transform: scale(1.1);
 }
 
 #icon_More_Vertical {
@@ -141,6 +147,9 @@
   font-size: 1rem;
   line-height: 1.5rem;
   padding-top: 0.5rem;
+}
+.creator_Username_Watch:hover {
+  color: var(--orange);
 }
 .view_Icon_Watch_Bloc,
 .like_Icon_Watch_Bloc {
