--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -116,6 +116,9 @@ section {
 body {
   line-height: 1;
   font-family: "poppins";
+  background-color: var(--black);
+  height: 100%;
+  overflow: auto;
 }
 ol,
 ul {
