--- a/frontend/src/pages/Videos/Video.css
+++ b/frontend/src/pages/Videos/Video.css
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  padding: 1rem 0 1rem 0;
 }
 
 .container_Comment,
@@ -21,8 +22,7 @@
   transition:
     transform 0.5s ease,
     opacity 1s ease;
-  position: absolute;
-  bottom: -12rem;
+  position: relative;
   right: 1rem;
 }
 
@@ -93,11 +93,5 @@
     min-height: calc(100vh);
     justify-content: center;
     align-items: center;
-  }
-  .addCommentSection {
-    bottom: -29rem;
-  }
-  .container_Comment {
-    bottom: -29rem;
   }
 }
