--- a/frontend/src/pages/SearchResult/SearchResult.css
+++ b/frontend/src/pages/SearchResult/SearchResult.css
@@ -10,4 +10,15 @@
 
 .searched_Text_Container {
   color: var(--white);
+  margin: 2rem;
+}
+
+@media (min-width: 1024px) {
+  .search_Result_Section {
+    display: grid;
+    grid-gap: 3rem;
+    grid-template-columns: repeat(auto-fit, minmax(0, auto));
+    justify-content: start;
+    margin: 2rem;
+  }
 }
