--- a/frontend/src/components/VideoCard Home/VideocardHome.css
+++ b/frontend/src/components/VideoCard Home/VideocardHome.css
@@ -5,6 +5,7 @@
 .video_Thumbnail_Home {
   height: 200px;
   width: 100%;
+  border-radius: 10px;
   object-fit: cover;
 }
 .video_Data_Home {
@@ -99,9 +100,10 @@
     position: relative;
   }
   .video_Thumbnail_Home {
-    height: 200px;
-    width: 450px;
+    height: 120px;
+    width: 100%;
     margin-bottom: 0;
+    border-radius: 10px;
   }
   .video_Data_Home {
     display: flex;
