--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -26,10 +26,10 @@
   display: flex;
   align-items: center;
   width: 56%;
-  height: 3.938rem;
+  height: 3rem;
   border-radius: 50px 50px 50px 50px;
   background-color: var(--black);
-  border: solid 2px rgba(255, 255, 255, 1);
+  border: solid 1px rgba(255, 255, 255, 1);
   color: rgba(255, 255, 255, 1);
   font-family: "poppins";
   font-weight: bold;
@@ -50,6 +50,7 @@
 }
 .input_Search::placeholder {
   padding: 0;
+  color: var(--light-grey);
 }
 .logIn_Btn {
   background-color: var(--orange);
@@ -93,7 +94,7 @@
   }
   .container_Search {
     width: 44%;
-    height: 3.8rem;
+    height: 2.5rem;
     font-family: "poppins";
     font-weight: bold;
     font-size: 25px;
