--- a/frontend/src/pages/SearchResult/SearchResult.css
+++ b/frontend/src/pages/SearchResult/SearchResult.css
@@ -1,3 +1,7 @@
+.search_Result_Section_Wrapper {
+  min-height: calc(100vh - 5.5rem);
+}
+
 .search_Result_Section {
   background-color: var(--black);
   display: flex;
@@ -5,7 +9,6 @@
   justify-content: center;
   color: var(--white);
   text-align: center;
-  min-height: calc(100vh - 5.5rem);
 }
 
 .searched_Text_Container {
@@ -17,7 +20,7 @@
   .search_Result_Section {
     display: grid;
     grid-gap: 3rem;
-    grid-template-columns: repeat(auto-fit, minmax(0, auto));
+    grid-template-columns: repeat(auto-fit, minmax(295px, auto));
     justify-content: start;
     margin: 2rem;
   }
