fixed home page settings front design

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -2,15 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
   flex-wrap: wrap;
+  padding: 1rem 0;
 }
 .header-unregistered {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  padding-top: 1rem;
+  margin-top: 1rem;
   flex-wrap: wrap;
   border-bottom: 0.0002rem solid var(--white);
   margin-bottom: 1rem;
@@ -29,8 +28,8 @@
   height: 3rem;
   border-radius: 50px 50px 50px 50px;
   background-color: var(--black);
-  border: solid 1px rgba(255, 255, 255, 1);
-  color: rgba(255, 255, 255, 1);
+  border: solid 1px var(--white);
+  color: var(--white);
   font-family: "poppins";
   font-weight: bold;
   font-size: 15px;
@@ -44,7 +43,7 @@
   height: 90%;
   background-color: var(--black);
   border-style: none;
-  color: rgba(255, 255, 255, 1);
+  color: var(--white);
   font-size: 20px;
   border-radius: 50px;
 }
@@ -57,13 +56,13 @@
   color: var(--black);
   border-radius: 50px;
   border: none;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 500;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 87.5%;
-  height: 3.938rem;
+  height: 3rem;
   cursor: pointer;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -108,7 +107,7 @@
     height: 90%;
     background-color: var(--black);
     border-style: none;
-    color: rgba(255, 255, 255, 1);
+    color: var(--white);
     font-size: 15px;
     border-radius: 50px;
   }
@@ -116,6 +115,6 @@
     border-bottom: none;
   }
   .logIn_Btn {
-    width: 17.78%;
+    width: 17%;
   }
 }
