--- a/frontend/src/pages/UsersProfile/UsersProfile.css
+++ b/frontend/src/pages/UsersProfile/UsersProfile.css
@@ -16,13 +16,13 @@
 
 .img_And_Username_And_Settings_Container {
   display: flex;
-  position: relative;
+  /* position: relative; */
 }
 
 .img_And_Username_Container {
   display: flex;
   align-items: center;
-  width: 70%;
+  width: 60%;
 }
 
 .user_Profile_Img_Container {
@@ -69,15 +69,18 @@
   cursor: pointer;
 }
 
+.settings_General_Wrapper {
+  position: relative;
+}
+
 .settings_Container {
   display: flex;
   align-items: flex-end;
   justify-content: center;
   position: absolute;
-  right: 1.5rem;
-  top: 0.3rem;
+  right: -8rem;
+  top: 2rem;
   flex-direction: column;
-  padding: 1rem;
 }
 
 .settings_Container.active {
@@ -86,6 +89,7 @@
   transition: var(--speed) ease;
   border-radius: 10px;
   z-index: 1;
+  padding: 1rem;
 }
 
 .settings_Container.inactive {
@@ -95,10 +99,14 @@
 .dropdown_Settings {
   background-color: var(--grey);
   position: relative;
+  /* top: 100%;
+  right: 0; */
   display: flex;
   flex-direction: column;
   width: max-content;
   border-radius: 10px;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .dropdown_Settings.active {
@@ -112,6 +120,7 @@
 .dropdown_Settings.inactive {
   opacity: 0;
   visibility: hidden;
+  /* display: none; */
 }
 
 .dropdown_Settings button {
@@ -137,13 +146,12 @@
 }
 
 .user_Description_Container {
-  /* width: 60%; */
   margin: 0 2rem;
 }
 
 .user_Description {
   text-align: left;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 .follow_Btn_Container {
@@ -193,12 +201,11 @@
     margin: 2rem;
   }
 
-  .img_And_Username_Container {
-    width: 80%;
-    margin: 2rem;
-  }
-
   .user_Description {
     padding: 1rem 2rem;
+  }
+
+  .img_And_Username_Container {
+    width: 70%;
   }
 }
