--- a/frontend/src/pages/Signup/Signup.css
+++ b/frontend/src/pages/Signup/Signup.css
@@ -10,7 +10,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 0.5rem;
+  margin-top: 3rem;
+  margin-bottom: 1.5rem;
 }
 
 .container_Sign {
@@ -18,7 +19,7 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
-  margin-top: 1.5rem;
+  /* margin-top: 1.5rem; */
 }
 
 .text_Title_Sign {
@@ -27,7 +28,8 @@
   justify-content: center;
   color: var(--white);
   align-items: center;
-  margin-bottom: 1rem;
+  padding: 1rem;
+  margin-bottom: 2rem;
 }
 
 .title_Signup {
@@ -38,7 +40,7 @@
 
 #join_Us {
   color: rgba(255, 255, 255, 1);
-  font-size: 25px;
+  font-size: 30px;
 }
 
 .container_Input_Sign {
@@ -68,11 +70,11 @@
 }
 
 #email_Sign {
-  height: 3.8rem;
+  height: 3rem;
   border-radius: 50px 50px 50px 50px;
   background-color: var(--black);
-  border: solid 2px rgba(255, 255, 255, 1);
-  padding-left: 4.5%;
+  border: solid 1px rgba(255, 255, 255, 1);
+  padding-left: 1.5rem;
   color: rgba(255, 255, 255, 1);
   font-family: "poppins";
   font-size: 15px;
@@ -92,12 +94,12 @@
 }
 
 #username_Sign {
-  height: 3.8rem;
+  height: 3rem;
   border-radius: 50px 50px 50px 50px;
   background-color: var(--black);
-  border: solid 2px rgba(255, 255, 255, 1);
-  padding-left: 4.5%;
-  color: rgba(255, 255, 255, 1);
+  border: solid 1px var(--white);
+  padding-left: 1.5rem;
+  color: var(--white);
   font-family: "poppins";
   font-size: 15px;
   margin-bottom: 0.5rem;
@@ -116,20 +118,20 @@
 }
 
 #pass_Sign {
-  height: 3.8rem;
+  height: 3rem;
   border-radius: 50px 50px 50px 50px;
   background-color: var(--black);
-  border: solid 2px rgba(255, 255, 255, 1);
-  padding-left: 4.5%;
-  color: rgba(255, 255, 255, 1);
+  border: solid 1px var(--white);
+  padding-left: 1.5rem;
+  color: var(--white);
   font-family: "poppins";
   font-size: 15px;
 }
 
 ::placeholder {
   font-size: 1em;
-  color: rgba(255, 255, 255, 1);
-  padding-left: 3%;
+  color: var(--light-grey);
+  padding-left: 0;
 }
 
 .container_But_Signup {
@@ -142,13 +144,14 @@
 
 .signup_Button {
   width: 100%;
-  margin-top: 3rem;
-  height: 3.8rem;
-  background-color: rgba(221, 167, 79, 1);
+  margin-top: 1.5rem;
+  height: 3rem;
+  background-color: var(--orange);
   border-radius: 50px 50px 50px 50px;
   font-family: "poppins";
   font-size: 25px;
-  border: 1.5px rgba(221, 167, 79, 1);
+  border: 1px var(--orange);
+  cursor: pointer;
 }
 
 .container_Text_End {
@@ -163,18 +166,18 @@
   .container_Body_Signup {
     min-height: 100vh;
   }
-  .text_Title_Sign {
+  /* .text_Title_Sign {
     margin-bottom: 4rem;
-  }
+  } */
   .title_Signup {
-    color: rgba(255, 255, 255, 1);
+    color: var(--white);
     font-size: 35px;
-    -webkit-text-stroke: 1px rgba(255, 255, 255, 1);
+    -webkit-text-stroke: 1px var(--white);
   }
 
   #join_Us {
-    color: rgba(255, 255, 255, 1);
-    font-size: 25px;
+    color: var(--white);
+    font-size: 30px;
   }
 
   #text_Sign {
