--- a/frontend/src/components/Modal/Modal.css
+++ b/frontend/src/components/Modal/Modal.css
@@ -20,6 +20,9 @@
 }
 
 .modal_Content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 25px;
   font-weight: 400;
   line-height: 2rem;
